# project

./: .gitignore  Excel2LaTeX.xla  Hanoi.py  PEP 8 -- Style Guide for Python Code.md  README.md  git cheat sheet.txt  python生成图片.docx  summary_statistics.xlsx  修改默认工作路径.txt
Data Science/: generate_pic.txt
Data Science/GIS/: GIS_advance_backup.py  GIS_clean.py  admin_code_2002-2014.csv  data_GIS-mul.py  data_GIS-single.py  data_convert.R  data_pre.py  geoBaidu.py  gis_distance_calculation.py  gis_run.py  gis_run_final.py  gis_run_land_final.py  read me.txt  school_name_gis.rar  坐标系统转换.md  工业企业数据地址操作.md  开发日志.md
Data Science/data visualization/: cn_states.html  cn_states2.html  data visualization demo.rar  map_folium.py  map_vincent.py  us_state.html  us_state_map.html
Data Science/deep learning/: deep_learning.py
Data Science/machine_learning/: NNR_demo.py  mc1.py
Data Science/parallel program/: test_process_cpu2.py
GIS/: 如何打包package.txt
GIS/geoBaidu-0.1v/: LICENSE.txt  README.md  pyproject.toml  setup.py
GIS/geoBaidu-0.1v/geoBaidu/: __init__.py  util.py
GIS/geoBaidu-0.1v/geoBaidu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GIS/geoBaidu-0.1v/test/: gis_school.py
GIS/geoChina/: README.md  api_key.txt  baidu_amap_poi.xlsx
citation analysis/: demo.py  outline.md
database_hack/: basic_hack_sqlite3.py  database_clean.py  landmarket_database.py  province code.xlsx
economics/auction/: data_stat.py  info_premium.asv  info_premium.m  pri_analysis.py  reg_prep.py
web_spider/: PhantomJS_selenium.py
webapp/: wechatapp-learning.txt
(+298 files in other folders)
